<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/store"
        android:icon="@drawable/store"
        android:title="Store">
    </item>
    <item
        android:id="@+id/profile"
        android:icon="@drawable/profile"
        android:title="@string/profile">
    </item>

    <item
        android:id="@+id/myOrder"
        android:icon="@drawable/order"
        android:title="My Order" >
    </item>

    <item
        android:id = "@+id/myCart"
        android:icon="@drawable/cart"
        android:title="My Cart">
    </item>

    <item
        android:id = "@+id/myProduct"
        android:icon="@drawable/my_product"
        android:title="My Product" />
    <item
        android:id="@+id/notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="Notification" />
    <item
        android:id="@+id/addNewProduct"
        android:icon="@drawable/add_product"
        android:title="@string/AddProduct" />

    <item
        android:id="@+id/logout"
        android:icon="@drawable/logout"
        android:title="@string/logout">
    </item>





</menu>